[25] JEP 506: Scoped Values (#4119)
Feature has graduated as of 25-ea+27

Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4043